cambios de funciones